--- a/tool/pom.xml
+++ b/tool/pom.xml
@@ -55,7 +55,7 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>3.7</version>
+            <version>${sakai.commons.lang3.version}</version>
         </dependency>
 
         <!-- Sakai dependencies -->
