Set commons-lang3 dependencies

--- a/ws/pom.xml
+++ b/ws/pom.xml
@@ -51,8 +51,9 @@
             <artifactId>servlet-api</artifactId>
         </dependency>
         <dependency>
-            <groupId>commons-lang</groupId>
-            <artifactId>commons-lang</artifactId>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${sakai.commons.lang3.version}</version>
         </dependency>
         <dependency>
             <groupId>org.json</groupId>
